--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
     <script src="index.js"></script>
 </head>
 <body>
-    <p>
-       <strong>Important:</strong> These are paid courses and are strictly in-person for both weekday and weekend sessions.<br>
-       <strong>WeekDay Courses:</strong> Graphic Design or Web Development<br>
-       <strong>WeekEnd Courses:</strong> Robotics or Computer Literacy<br>
-       <strong>Home/Virtual Course:</strong> Coding For Beginners<br>
-       <strong>Note:</strong> The courses are available for both adults and children.
-    </p>
+   
 
     <h1>Course Registration Form</h1>
     <form action="http://localhost:3000/api/register-course" method="POST" class="container mt-4 mb-4 p-4 bg-white rounded shadow">
+        <p>
+       <strong style="color: red;">Important:</strong> These are paid courses and are strictly in-person for both weekday and weekend sessions.<br>
+       <strong style="color: red;">WeekDay Courses:</strong> Graphic Design or Web Development<br>
+       <strong style="color: red;">WeekEnd Courses:</strong> Robotics or Computer Literacy<br>
+       <strong style="color: red;">Home/Virtual Course:</strong> Coding For Beginners<br>
+       <strong style="color: red;">Note:</strong> The courses are available for both adults and children.
+    </p>
+       
         <!-- Section 1: Personal Information -->
         <div class="section-title">Personal Information</div>
         <div class="form-section">
